Bug 509048 -  hitting enter after a paste into the location bar does nothing (r=gavin)