toolkit/components/autocomplete/src/nsAutoCompleteController.cpp
@@ -78,7 +78,6 @@ NS_INTERFACE_TABLE_HEAD(nsAutoCompleteController)
 NS_INTERFACE_MAP_END
 
 nsAutoCompleteController::nsAutoCompleteController() :
-  mEnterAfterSearch(0),
   mDefaultIndexCompleted(PR_FALSE),
   mBackspaced(PR_FALSE),
   mPopupClosedByCompositionStart(PR_FALSE),
@@ -153,7 +152,6 @@ nsAutoCompleteController::SetInput(nsIAutoCompleteInput *aInput)
 
   // Reset all search state members to default values
   mSearchString = newValue;
-  mEnterAfterSearch = 0;
   mDefaultIndexCompleted = PR_FALSE;
   mBackspaced = PR_FALSE;
   mSearchStatus = nsIAutoCompleteController::STATUS_NONE;
@@ -287,12 +285,8 @@ nsAutoCompleteController::HandleEnter(PRBool aIsPopupSelection, PRBool *_retval)
     }
   }
 
-  // clear the search timer only if we are not searching.
-  // if we are searching, EnterMatch() will not handle the enter
-  // immediately.  instead, we will handle it on the next result we process
-  // but we need the search timer to fire to kick of that search
-  if (mSearchStatus != nsIAutoCompleteController::STATUS_SEARCHING)
-    ClearSearchTimer();
+  // Stop the search, and handle the enter.
+  StopSearch();
   EnterMatch(aIsPopupSelection);
 
   return NS_OK;
@@ -1083,14 +1077,6 @@ nsAutoCompleteController::ClearSearchTimer()
 nsresult
 nsAutoCompleteController::EnterMatch(PRBool aIsPopupSelection)
 {
-  // If a search is still ongoing, bail out of this function
-  // and let the search finish, and tell it to come back here when it's done
-  if (mSearchStatus == nsIAutoCompleteController::STATUS_SEARCHING) {
-    mEnterAfterSearch = aIsPopupSelection ? 2 : 1;
-    return NS_OK;
-  }
-  mEnterAfterSearch = 0;
-
   nsCOMPtr<nsIAutoCompleteInput> input(mInput);
   nsCOMPtr<nsIAutoCompletePopup> popup;
   input->GetPopup(getter_AddRefs(popup));
@@ -1280,11 +1266,6 @@ nsAutoCompleteController::ProcessResult(PRInt32 aSearchIndex, nsIAutoCompleteRes
     // If this is the last search to return, cleanup
     PostSearchCleanup();
   }
-  else if (mEnterAfterSearch) {
-    // since we still have searches ongoing (mSearchesOngoing != 0)
-    // and the user has hit enter, stop the searches
-    StopSearch();
-  }
 
   return NS_OK;
 }
@@ -1311,11 +1292,6 @@ nsAutoCompleteController::PostSearchCleanup()
 
   // notify the input that the search is complete
   input->OnSearchComplete();
-
-  // if mEnterAfterSearch was set, then the user hit enter while the
-  // search was ongoing, so we need to enter a match now that the search is done
-  if (mEnterAfterSearch)
-    EnterMatch(mEnterAfterSearch == 2);
 
   return NS_OK;
 }
@@ -1346,7 +1322,7 @@ nsAutoCompleteController::ClearResults()
 nsresult
 nsAutoCompleteController::CompleteDefaultIndex(PRInt32 aSearchIndex)
 {
-  if (mDefaultIndexCompleted || mEnterAfterSearch || mBackspaced || mRowCount == 0 || mSearchString.Length() == 0)
+  if (mDefaultIndexCompleted || mBackspaced || mRowCount == 0 || mSearchString.Length() == 0)
     return NS_OK;
 
   PRInt32 selectionStart;
